--- a/test_shape_editor.html
+++ b/test_shape_editor.html
@@ -119,8 +119,27 @@
                 getShapeStyle(shape) {
                     // Scale PowerPoint EMU to canvas pixels
                     // Use actual slide dimensions from the presentation
-                    const slideWidth = this.editingPresentation.slides[0].width;
-                    const slideHeight = this.editingPresentation.slides[0].height;
+                    if (!this.editingPresentation) {
+                        return { display: 'none' };
+                    }
+
+                    // Get slide dimensions - check multiple possible locations
+                    let slideWidth, slideHeight;
+
+                    if (this.editingPresentation.slide_width && this.editingPresentation.slide_height) {
+                        slideWidth = this.editingPresentation.slide_width;
+                        slideHeight = this.editingPresentation.slide_height;
+                    } else if (this.editingPresentation.slides && this.editingPresentation.slides[0]) {
+                        slideWidth = this.editingPresentation.slides[0].width || this.editingPresentation.slides[0].slide_width;
+                        slideHeight = this.editingPresentation.slides[0].height || this.editingPresentation.slides[0].slide_height;
+                    }
+
+                    // Default PowerPoint slide dimensions in EMU if not found
+                    if (!slideWidth || !slideHeight) {
+                        slideWidth = 9144000;  // 10 inches in EMU
+                        slideHeight = 6858000; // 7.5 inches in EMU
+                    }
+
                     const canvasWidth = 800;
                     const canvasHeight = 600;
 
@@ -129,8 +148,8 @@
 
                     const left = Math.round((shape.left || 0) * scaleX);
                     const top = Math.round((shape.top || 0) * scaleY);
-                    const width = Math.max(50, Math.round((shape.width || 100000) * scaleX));
-                    const height = Math.max(20, Math.round((shape.height || 50000) * scaleY));
+                    const width = Math.max(20, Math.round((shape.width || 914400) * scaleX));
+                    const height = Math.max(20, Math.round((shape.height || 914400) * scaleY));
 
                     return {
                         left: `${left}px`,
